barebones fft structure

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,11 +2,11 @@ CC      := gcc
 CFLAGS  := -I "../include/"  -Wpedantic -Wall -Wextra -g -O2  #-Wconversion
 LDFLAGS := -lm -lfftw3
 
-SRC     := main.c input-handler.c
+SRC     := main.c input-handler.c freq-analysis.c
 OBJ     := $(SRC:.c=.o)
 TARGET  := main
 
-MISC	:= *.ppm *.txt
+MISC	:= *.txt
 
 .PHONY: all clean
 
